--- a/Blog/appsettings.json
+++ b/Blog/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "BlogDbConnection": "server=(localdb)\\MSSQLLocalDB;database=BlogDB;Trusted_Connection=true"
+  }
 }
