Added responsive images

--- a/Blog/Blog.csproj
+++ b/Blog/Blog.csproj
@@ -129,6 +129,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="TinyMCE" Version="5.6.2" />
   </ItemGroup>
 
 </Project>
